@startuml ingestion-erd
note as N1
  Ingestion is asynchronous: createJob() persists the job (status=RECEIVED)
  then publishes an IngestionJobEvent to the Kafka topic "ingestion.jobs".
  IngestionEventConsumer (@KafkaListener, groupId=ingestion-processor) picks
  it up and calls IngestionService.processJob() out of band from the HTTP
  request. @RetryableTopic retries 3x before routing to "ingestion.jobs.dlt",
  whose @DltHandler marks the job FAILED.
end note

entity "IngestionJob" as J {
  * id : Long <<PK>>
  --
  companyId : Long <<FK ext>>
  templateId : Long <<FK ext>>
  templateName : String(150)
  status : IngestionStatus
  originalFileName : String(255)
  storedFileName : String(255)
  contentType : String(100)
  fileSize : Long
  storagePath : String(500)
  checksum : String(128)
  startedAt : LocalDateTime
  finishedAt : LocalDateTime
  createdAt : LocalDateTime
  createdBy : String(100)
  errorMessage : String(4000)
  recordCount : Long
  errorCount : Long
}

entity "IngestedRecord" as REC {
  * id : Long <<PK>>
  --
  recordIndex : Long
  rawPayload : TEXT
  normalizedPayload : TEXT
  validationStatus : ValidationStatus
  createdAt : LocalDateTime
}

entity "IngestionError" as ERR {
  * id : Long <<PK>>
  --
  fieldName : String(100)
  errorType : String(100)
  message : String(4000)
  rawValue : String(1000)
  lineNumber : Long
  createdAt : LocalDateTime
}

J ||--o{ REC : "records"
J ||--o{ ERR : "errors"
REC ||--o{ ERR : "errors"
@enduml
